--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "browser-image-compression": "^2.0.0",
     "framer-motion": "^7.9.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
